--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/passworddb
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/fieldcontrol_db
 spring.datasource.username=postgres
 spring.datasource.password=${DB_PASSWORD}
+
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Server Port
+server.port=8080
